fix(css): dropdown z-index should be higher than colorbox value

--- a/sass/components/tokeninput.scss
+++ b/sass/components/tokeninput.scss
@@ -111,7 +111,7 @@ div.token-input-dropdown {
 	border-bottom: 1px solid $border-color;
 	cursor: default;
 	font-size: 12px;
-	z-index: 1;
+	z-index: 1200 !important;
 	@include box-sizing(border-box);
 
 
